# waifuim

./: .readthedocs.yml  pyproject.toml
docs/: conf.py  index.rst
docs/pages/: reference.rst
waifuim/: __init__.py  client.py  exceptions.py  models.py
