[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "waifuim"
description="A Python wrapper for the Waifu.im API"
readme = "README.md"
python_requires = ">=3.10"
license = {text = "MIT License", file = "LICENSE"}
dependencies = [
    "aiohttp",
    "typing_extensions",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "waifuim.__version__"}

[tool.black]
line-length = 125

[tool.isort]
profile = "black"
line_length = 125
force_alphabetical_sort_within_sections = true

[tool.pyright]
typeCheckingMode = "basic"
